@@ -131,3 +131,24 @@ remove_cr_inplace()
 {
   sed -i -e "s/\r//g" "$@" || framework_failure_
 }
+
+require_selinux_()
+{
+  # When in a chroot of an SELinux-enabled system, but with a mock-simulated
+  # SELinux-*disabled* system, recognize that SELinux is disabled system wide:
+  grep 'selinuxfs$' /proc/filesystems > /dev/null \
+    || skip_ "this system lacks SELinux support"
+
+  # Independent of whether SELinux is enabled system-wide,
+  # the current file system may lack SELinux support.
+  # Also the current build may have SELinux support disabled.
+  case $(ls -Zd .) in
+    '? .'|'unlabeled .')
+      test -z "$CONFIG_HEADER" \
+        && framework_failure_ 'CONFIG_HEADER not defined'
+      grep '^#define HAVE_SELINUX_SELINUX_H 1' "$CONFIG_HEADER" > /dev/null \
+        && selinux_missing_="(file) system" || selinux_missing_="build"
+      skip_ "this $selinux_missing_ lacks SELinux support"
+    ;;
+  esac
+}
